# AIOS

./: .gitignore  AIOS_停止WebUI.command  AIOS_启动WebUI.command  AIOS_多模型开发中枢需求设计方案.md  README.md  pyproject.toml
docs/: AIOS_使用说明操作手册.md  AIOS_同类项目对比与借鉴分析.md  AIOS_当前版本价值说明.md  AUTOMATION_PROGRESS_v038.md  DEV_PLAN_v038.md  ITERATION_PLAN.md  P2_DESIGN.md  P3_10_DESIGN.md  P3_11_DESIGN.md  P3_12_DESIGN.md  P3_13_DESIGN.md  P3_14_DESIGN.md  P3_16_DESIGN.md  P3_17_DESIGN.md  P3_18_DESIGN.md  P3_19_DESIGN.md  P3_20_DESIGN.md  P3_21_DESIGN.md  P3_22_DESIGN.md  P3_23_DESIGN.md  P3_24_DESIGN.md  P3_26_DESIGN.md  P3_27_DESIGN.md  P3_28_DESIGN.md  P3_29_DESIGN.md  P3_2_DESIGN.md  P3_30_DESIGN.md  P3_31_DESIGN.md  P3_32_DESIGN.md  P3_33_DESIGN.md  P3_34_DESIGN.md  P3_35_DESIGN.md  P3_3_DESIGN.md  P3_4_DESIGN.md  P3_5_DESIGN.md  P3_6_DESIGN.md  P3_7_DESIGN.md  P3_8_DESIGN.md  P3_9_DESIGN.md  P3_DESIGN.md  (+3 more)
docs/aios-tutorial/: package-lock.json  package.json
docs/plans/: aios-control-tower-v041.md  aios-mvp-v1-business-pipeline.md  aios-mvp-v1-test-plan.md  aios-production-core-rollout.md  aios-system-improvement-roadmap.md  phase1-handoff-development.md  semi-automatic-execution.md
scripts/: start_local_webui.sh  stop_local_webui.sh
tests/: test_aios_cli.py  test_error_handling.py  test_launcher.py  test_model_persistence.py  test_mvp_v1_progress.py  test_p1_features.py  test_p2_git_diff.py  test_p2_route_learning.py  test_p2_scoring.py  test_p2_token_estimation.py  test_p3_execution.py  test_p3_scheduler.py  test_p4_auto_pipeline.py  test_p4_full_pipeline.py  test_web_ui.py
(+72 files in other folders)
